crea header e centra verticalmente logo e titolo

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>ToBoo-List</title>
 </head>
 <body>
-    
+    <header>
+        <img id="logo_image" src="./imgs/logo_white_backg.png" alt="Logo">
+        <h1 class="main_title">Toboolist</h1>
+    </header>
 </body>
 </html>
