aggiunge button add-task

--- a/index.html
+++ b/index.html
@@ -9,5 +9,14 @@
         <img id="logo_image" src="./imgs/logo_white_backg.png" alt="Logo">
         <h1 class="main_title">Toboolist</h1>
     </header>
+
+    <main>
+        <!--Prima barra con buttons-->
+        <section>
+            <div class="actions_bar">
+                <button class="add_task_button">Add Task</button>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
