aggiunge pulsante add-section

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <section>
             <div class="actions_bar">
                 <button class="add_task_button">Add Task</button>
+                <button class="add_section_button">Add Section</button>
             </div>
         </section>
     </main>
