crea sezioni new-tasks e today

--- a/index.html
+++ b/index.html
@@ -12,10 +12,60 @@
 
     <main>
         <!--Prima barra con buttons-->
-        <section>
-            <div class="actions_bar">
-                <button class="add_task_button">Add Task</button>
-                <button class="add_section_button">Add Section</button>
+        <section class="actions_bar">
+            <button class="add_task_button">Add Task</button>
+            <button class="add_section_button">Add Section</button>
+        </section>
+
+        <hr>
+
+        <section class="main_menu">
+            <div class="new_tasks">
+                <h2>&dtrif;New Tasks</h2>
+
+                <div class="row">
+                    <span class="tick">&check;</span>
+
+                    <span>Quarterly Newsletter</span>
+
+                    <span class="task_tag tag_type_editorial">Editorial</span>
+                </div>
+            </div>
+
+            <div class="today_tasks">
+                <h2>&dtrif;Today</h2>
+
+                <div class="row">
+                    <span class="tick">&check;</span>
+
+                    <span>Recruitung blog post</span>
+
+                    <span class="task_tag tag_type_editorial">Editorial</span>
+                </div>
+
+                <div class="row">
+                    <span class="tick">&check;</span>
+
+                    <span>Mobile app launch</span>
+
+                    <span class="task_tag tag_type_q1goals">Q1 Goals</span>
+                </div>
+
+                <div class="row">
+                    <span class="cross">&cross;</span>
+
+                    <span>Interview John H.</span>
+
+                    <span class="task_tag tag_type_recruiting">Recruiting</span>
+                </div>
+
+                <div class="row">
+                    <span class="tick">&check;</span>
+
+                    <span>Summit update to mobile storefronts</span>
+
+                    <span class="task_tag tag_type_mobile">Mobile</span>
+                </div>
             </div>
         </section>
     </main>
