aggiunge sezione upcoming e modifiche finali

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         <hr>
 
         <section class="main_menu">
-            <div class="new_tasks">
+
+            <!--Sezione New Tasks-->
+            <div class="tasks_section">
                 <h2>&dtrif;New Tasks</h2>
 
                 <div class="row">
@@ -32,7 +34,8 @@
                 </div>
             </div>
 
-            <div class="today_tasks">
+            <!--Sezione Today-->
+            <div class="tasks_section">
                 <h2>&dtrif;Today</h2>
 
                 <div class="row">
@@ -65,6 +68,42 @@
                     <span>Summit update to mobile storefronts</span>
 
                     <span class="task_tag tag_type_mobile">Mobile</span>
+                </div>
+            </div>
+
+
+            <!--Sezione Upcoming-->
+            <div class="tasks_section">
+                <h2>&dtrif;Upcoming</h2>
+
+                <div class="row">
+                    <span class="cross">&cross;</span>
+
+                    <span>Schedule meeting with Alex</span>
+                </div>
+
+                <div class="row">
+                    <span class="tick">&check;</span>
+
+                    <span>Homepage refresh</span>
+
+                    <span class="task_tag tag_type_website">Website</span>
+                </div>
+
+                <div class="row">
+                    <span class="tick">&check;</span>
+
+                    <span>Onboard new sales team member</span>
+
+                    <span class="task_tag tag_type_sales">Sales</span>
+                </div>
+
+                <div class="row">
+                    <span class="tick">&check;</span>
+
+                    <span>Review editorial calendar</span>
+
+                    <span class="task_tag tag_type_editorial">Editorial</span>
                 </div>
             </div>
         </section>
