--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
 
     <main>
         <!--Prima barra con buttons-->
-        <section class="actions_bar">
-            <button class="add_task_button">Add Task</button>
-            <button class="add_section_button">Add Section</button>
+        <section>
+            <div  class="actions_bar">
+                <button class="add_task_button">Add Task</button>
+                <button class="add_section_button">Add Section</button>
+            </div>
         </section>
 
         <hr>
